# mpp-votes

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  i18n.toml  index.html  package-lock.json  package.json  worker.js
analyzer/: Cargo.toml  divisions.json
analyzer/src/: actions.rs  main.rs  members.rs  sites.rs  util.rs  votes.rs
analyzer/src/actions/: members.rs  votes.rs
analyzer/src/votes/: parser.rs  refine.rs
common/: Cargo.toml
common/bolb/: Cargo.toml
common/bolb/src/: main.rs
common/src/: lib.rs  search.rs
css/: bulma.css
i18n/en-CA/: onvotes.ftl
i18n/fr-CA/: onvotes.ftl
sass/: parties.scss
server/: Cargo.toml
server/data/: divisions.json  members.json
server/src/: api.rs  db.rs  json.rs  main.rs
server/src/api/: riding.rs
src/: api.rs  i18n.rs  lib.rs  nav.rs  searcher.rs  startup.rs  ui.rs  util.rs
src/ui/: error.rs  faqs.rs  footer.rs  home.rs  mpp.rs  vote.rs
