[package]
version = "0.1.0"
name = "onvotes"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["Redrield <redrield@gmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
common = { path = "./common" }
console_log = "0.2.0"
flate2 = "1.0.19"
fst = { version = "0.4.5", features = ["levenshtein"] }
futures-util = "0.3.8"
gloo-timers = "0.2.1"
#i18n-embed = { version = "0.10.2", features = ["fluent-system"] }
i18n-embed = { path = "cargo-i18n/i18n-embed", features = ["fluent-system", "web-sys-requester"] }
i18n-embed-fl = "0.3.1"
js-sys = "0.3.45"
lazy_static = "1.4.0"
log = "0.4.11"
once_cell = "1.5.2"
percent-encoding = "2.1.0"
rand = "0.7.3"
regex = "1.4.2"
regex-automata = { version = "0.1.9", features = ["transducer"] }
rust-embed = { version = "5.9.0", features = ["debug-embed"] }
seed = "0.8.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
sha = "1.0.3"
strsim = "0.10.0"
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
#web-sys = { version = "0.3.45", features = ["Window", "HtmlElement", "HtmlButtonElement"] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
