[package]
name = "analyzer"
version = "0.1.0"
authors = ["Redrield <redrield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
async-std = "1.7.0"
bytes = "^0.5"
chrono = "0.4.19"
common = { path = "../common" }
fern = { version = "0.6.0", features = ["colored"] }
flate2 = "1.0.19"
futures-util = "0.3.8"
ipfs-api = "0.7.2"
itertools = "0.9.0"
log = "0.4.11"
pdf = "0.7.0"
rayon = "1.5.0"
regex = "1.4.2"
reqwest = { version = "0.10.9", features = ["blocking"] }
select = "0.5.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "^0.2", features = ["full"] }
