[package]
name = "common"
version = "0.1.0"
authors = ["Redrield <redrield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
serde = { version = "1.0.117", features = ["derive"] }
strsim = "0.10.0"
