[package]
name = "mpp-votes"
version = "0.1.0"
authors = ["Redrield <redrield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.4.1"
actix-web = "3.3.1"
actix-web-httpauth = "0.5.0"
common = { path = "../common" }
env_logger = "0.8.2"
log = "0.4.11"
percent-encoding = "2.1.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
tantivy = "0.13.2"

[dependencies.reqwest]
version = "0.10.9"
default-features = false
features = ["rustls-tls-native-roots", "hyper-rustls", "tokio-rustls"]
